--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
+  "homepage": "https://Mushbird.github.io/portfolio",
   "name": "resume",
   "version": "0.0.0",
-  "repository": "https://github.com/HyunSeob/resume.git",
+  "repository": "https://github.com/Mushbird/portfolio.git",
   "author": "HyunSeob <mail@hyunseob.me>",
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "rm -rf docs; parcel build -d docs --public-url /resume src/index.html"
+    "build": "rm -rf docs; parcel build -d docs --public-url /resume src/index.html",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "normalize.css": "^8.0.0",
     "spoqa-han-sans": "^2.1.2"
   },
