--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build -d docs --public-url /resume src/index.html"
+    "build": "parcel build -d docs --public-url /portfolio src/index.html"
   },
   "dependencies": {
     "normalize.css": "^8.0.0",
